--- a/UnitTestTools/UnitTestTools.csproj
+++ b/UnitTestTools/UnitTestTools.csproj
@@ -39,7 +39,11 @@
   <ItemGroup>
     <Compile Include="Fødselsnummer.cs" />
     <Compile Include="FødselsnummerGenerator.cs" />
+    <Compile Include="FødselsnummerValidator.cs" />
+    <Compile Include="InvalidModuloException.cs" />
+    <Compile Include="KontrollsifferGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Range.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
