--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -43,15 +43,25 @@
     <Reference Include="xunit">
       <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FødselsnummerValidatorTests\Invalid\Invalid_Modulo.cs" />
+    <Compile Include="FødselsnummerValidatorTests\Valid\After_2000.cs" />
+    <Compile Include="FødselsnummerValidatorTests\Valid\Before_1900.cs" />
+    <Compile Include="FødselsnummerValidatorTests\Valid\Between_1900_and_2000.cs" />
+    <Compile Include="Valid_Kontrollsiffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Fødselsnummer\Valid_Birthdate\Year.cs" />
     <Compile Include="Fødselsnummer\Valid_Birthdate\Month.cs" />
     <Compile Include="Fødselsnummer\Valid_Birthdate\Date.cs" />
+    <Compile Include="Valid_Personnummer\All_Dates.cs" />
+    <Compile Include="Valid_Personnummer\Between_1900_1940.cs" />
+    <Compile Include="Valid_Personnummer\After_2000.cs" />
     <Compile Include="Valid_Personnummer\After_1900.cs" />
-    <Compile Include="Valid_Personnummer\Before_1900.cs" />
+    <Compile Include="Valid_Personnummer\Between_1854_1899.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -62,6 +72,7 @@
       <Name>UnitTestTools</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
